Feat: index tests, comments, query